<resources>
    <string name="app_name">Lukasz Borucki - CV</string>
    <string name="name_and_surname">Name Surname</string>
    <string name="phone_no">Phone No.</string>
    <string name="splash_data_dialog_password">Password</string>
    <string name="splash_data_dialog_user_email">E-mail</string>
    <string name="splash_data_dialog_user_name">Name</string>
    <string name="splash_data_dialog_user_surname">Surname</string>
    <string name="dialog_info">Info:</string>
    <string name="dialog_info_text">After registration on your e-mail address I will send password to MyCV application.\nPlease be patient email with the password I send once a day.</string>
    <string name="education">#Education</string>
    <string name="skills">#Skills</string>
    <string name="hobby">#Hobby</string>
    <string name="send_a_message">#Send a message</string>
    <string name="experience">#Experience</string>
    <string name="contact">#Contact</string>
    <string name="error_no_skype">Sorry, no Skype installed on your device.</string>
    <string name="mail_service_subject">Message from my CV app</string>
    <string name="mail_service_message">We invite you to an interview</string>
    <string name="my_mane_surname_phone">Name Surname Phone_No.</string>
    <string name="education_thesis_topic">Thesis topic:</string>
    <string name="education_applied_technologies">Applied technologies:</string>
    <string name="education_level_of_education">Level of education:</string>
    <string name="academy_logotype">Academy Logotype</string>
    <string name="skills_technologies">#Technologies</string>
    <string name="skills_traits">#Traits</string>
    <string name="menu_foreign_languages">#Foreign languages</string>
    <string name="menu_change_language">Change language</string>
    <string name="menu_information">Information</string>
    <string name="menu_reset">Reset configuration</string>
    <string name="progress_dialog_text">Lading data in progress...</string>
    <string name="progress_dialog_mail_text">Sending messages in progress ...</string>
    <string name="progress_dialog_title">Info:</string>
    <string name="alert_dialog_reset">If you press "YES" all data (authorization, my personal data) will be deleted.\n This operation is not reversible.</string>
    <string name="alert_dialog_title">Warning:</string>
    <string name="alert_dialog_confirm">YES</string>
    <string name="alert_dialog_cancel">CANCEL</string>
    <string name="alert_dialog_info">I hereby agree to process my personal data for the purposes necessary for the recruitment process (In accordance with the Act of 29.08.1997 on the Protection of Personal Data; Unified text: Journal of Laws 2016 y. pos. 922).</string>
    <string name="splash_skip">skip for: %d s</string>
    <string name="add_to_contact_book">Add to contact book</string>
    <string name="refresh_data">Refresh data</string>
    <string name="no_internet">Sorry, some problems with you Internet.  Please chceck your Internet connection and try again.</string>
    <string name="send_mail_message_content">Message content</string>
    <string name="send_message_button">Send a message</string>
    <string name="send_mail_error_message">Please enter a message before sending</string>
    <string name="send_mail_subject">Message from MyCV Api from:</string>
    <string name="send_message_clear">Clear</string>
    <string name="message_sent">Message sent</string>
    <string name="message_not_send">Message not sent.\\nPlease try again later.</string>
    <string name="splas_activity_register">Register</string>

</resources>
